crates/gpui_tea/tests/ui/duplicate_message.stderr
error: duplicate `message` attribute
  --> tests/ui/duplicate_message.rs:18:28
   |
18 | #[composite(message = Msg, message = Msg)]
   |                            ^^^^^^^
